--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://harshsaini1381:<Harsh12@>@cluster0.4yvcxdt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0&dbName=HR_MNG
+MONGO_URI=mongodb+srv://harshsaini1381:Ajvzj95ZV8FDpO8Z@cluster0.4yvcxdt.mongodb.net/HR_MNG?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET="TESTER"
 # MONGO_URI=mongodb://localhost:27017/HR_MNG
